--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
     })
   }
 
+  var fun = function(doc, win) {
+			var docEl = doc.documentElement,
+				resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+				recalc = function() {
+					var clientWidth = docEl.clientWidth;
+					if (!clientWidth) return;
+
+					//可以根据实际需要修改
+					docEl.style.fontSize = 100 * (clientWidth / 375) + 'px';
+				};
+			if (!doc.addEventListener) return;
+			win.addEventListener(resizeEvt, recalc, false);
+			doc.addEventListener('DOMContentLoaded', recalc, false);
+		}
+		// fun(document, window);
+
 </script>
 
 </html>
